# dw-ai

./: README.md  app.py  pyproject.toml
dw_ai/: __init__.py  ai_agent.py  artifacts.py  dbt_generator.py  diagram.py  ingestion.py  modelling.py  models.py  profiling.py  utils.py
test_data/: README.md
test_data/easy_retail/: customers.csv  employees.csv  order_items.csv  orders.csv  products.csv  stores.csv
test_data/hard_healthcare/: claims.csv  departments.csv  diagnoses.csv  encounters.csv  lab_results.csv  medication_orders.csv  patients.csv  procedures.csv  providers.csv
test_data/medium_university/: course_components.csv  enrollments.csv  instructors.csv  program_courses.csv  students.csv
tests/: test_ai_agent.py  test_demo_data.py  test_ingestion_and_profiling.py  test_modelling_and_generator.py
