[project]
name = "dw-ai"
version = "0.1.0"
description = "AI-assisted dimensional modelling and dbt project generation from enterprise data sources."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "openai>=1.40.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
